--- a/Leistungserfassung/Leistungserfassung/Leistungserfassung.csproj
+++ b/Leistungserfassung/Leistungserfassung/Leistungserfassung.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
+    <PackageReference Include="MongoDB.Bson" Version="2.13.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.13.1" />
   </ItemGroup>
 
   <ItemGroup>
